objects/ScCollection_PaymentAPIParameters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to capture transaction API parameters used in collection.</description>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_CMS_Auth_Key__c</fullName>
        <label>CMS Auth Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_CMS_User_Id__c</fullName>
        <label>CMS User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Collections API Parameters</label>
</CustomObject>